Rapid Prd/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Access_to_Customer_for_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticket #  33473 Per Devin&apos;s Request</description>
        <label>Access to Customer for Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <description>The person you contact at the clients location.</description>
        <label>Account Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_User__c</fullName>
        <description>Field Used in Reports/Dashboard to see data for Logged-In User</description>
        <formula>IF(OwnerId = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_you_a_direct_lender__c</fullName>
        <label>Are you a direct lender?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetSize__c</fullName>
        <label>Asset Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_to_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to Director</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>BD - Extended</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>BD Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BDPartnerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Sales_Assistant__c</fullName>
        <label>Assigned Sales Assistant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alex Lopez</fullName>
                </value>
                <value>
                    <fullName>Marilyn Nunez</fullName>
                </value>
                <value>
                    <fullName>Mauricio Safi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_dollar_amount_funded__c</fullName>
        <label>Average dollar amount funded per month?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Number_of_Deals_you_Fund_Monthly__c</fullName>
        <label>Avg Number of Deals You Fund Monthly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-5</fullName>
                </value>
                <value>
                    <fullName>5-10</fullName>
                </value>
                <value>
                    <fullName>10-15</fullName>
                </value>
                <value>
                    <fullName>15+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_End_Processor__c</fullName>
        <label>Back-End Processor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Letter__c</fullName>
        <label>Bank Letter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send to partner</fullName>
                </value>
                <value>
                    <fullName>Send to merchant-no processor change</fullName>
                </value>
                <value>
                    <fullName>Check with partner every time</fullName>
                </value>
                <value>
                    <fullName>Send to merchant after partner provides new mid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Suppression_Date__c</fullName>
        <description>Bonus Suppression for Partners (ISO Account) Date/Time Flagged as True</description>
        <label>Bonus Suppression Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bonus Suppression for Partners (ISO Account)</description>
        <label>Bonus Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessStage__c</fullName>
        <label>Business Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Growth</fullName>
                </value>
                <value>
                    <fullName>Stable/Mature</fullName>
                </value>
                <value>
                    <fullName>Preparing to Sell</fullName>
                </value>
                <value>
                    <fullName>Startup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessStructure__c</fullName>
        <label>Business Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-Corporation</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Proprietorship</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessType__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Appliance Store</fullName>
                </value>
                <value>
                    <fullName>Auto Service</fullName>
                </value>
                <value>
                    <fullName>Auto Supply Store</fullName>
                </value>
                <value>
                    <fullName>Bakery</fullName>
                </value>
                <value>
                    <fullName>Bar/Tavern</fullName>
                </value>
                <value>
                    <fullName>Beauty/Nail/Spa Salon</fullName>
                </value>
                <value>
                    <fullName>Bicycle Store</fullName>
                </value>
                <value>
                    <fullName>Book Store</fullName>
                </value>
                <value>
                    <fullName>Camera Store</fullName>
                </value>
                <value>
                    <fullName>Candy Store</fullName>
                </value>
                <value>
                    <fullName>Carwash</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>Cell Phone Store</fullName>
                </value>
                <value>
                    <fullName>Chiropractor</fullName>
                </value>
                <value>
                    <fullName>Clothing Store</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Computer and Software Store</fullName>
                </value>
                <value>
                    <fullName>Consignment/Second Hand Store</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Convenience Store</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Drug and Vitamin Store</fullName>
                </value>
                <value>
                    <fullName>Drycleaner</fullName>
                </value>
                <value>
                    <fullName>Electronics/TV and Radio Store</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Floor Covering Store</fullName>
                </value>
                <value>
                    <fullName>Florist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Development_Process_Completed__c</fullName>
        <label>Business Development Process Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CA_Lenders_License__c</fullName>
        <description>Task 10871</description>
        <label>CA Lenders License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculator_Sent__c</fullName>
        <label>Calculator Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Recording_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Recording Disclosure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Partner_Prospects__c</fullName>
        <label>Campaign - Partner Prospects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This partner account is associated with this campaign.</description>
        <inlineHelpText>This partner account is associated with this campaign.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Advance_Deals_Per_Month__c</fullName>
        <inlineHelpText>How many cash advance deals can the Potential Partner provide on a monthly basis?</inlineHelpText>
        <label>Cash Advance Deals Per Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Contains_Banks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Contains Banks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Contains_CUSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Contains CUSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Contains_Credit_Union__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Contains Credit Union</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Agent/MLS-US</fullName>
                </value>
                <value>
                    <fullName>Asset Based Lending</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
                <value>
                    <fullName>Broker/Intermediary</fullName>
                </value>
                <value>
                    <fullName>Cash Brokers</fullName>
                </value>
                <value>
                    <fullName>Commercial Real Estate</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processors</fullName>
                </value>
                <value>
                    <fullName>Credit Unions</fullName>
                </value>
                <value>
                    <fullName>CUSO</fullName>
                </value>
                <value>
                    <fullName>Econcomic Development</fullName>
                </value>
                <value>
                    <fullName>Equipment Leasing</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Government Contractor</fullName>
                </value>
                <value>
                    <fullName>High Quality Originator</fullName>
                </value>
                <value>
                    <fullName>High Volume Originator</fullName>
                </value>
                <value>
                    <fullName>Inventory Fianncing</fullName>
                </value>
                <value>
                    <fullName>ISO/MSP-CANADA</fullName>
                </value>
                <value>
                    <fullName>ISO/MSP-US</fullName>
                </value>
                <value>
                    <fullName>Lead Generator</fullName>
                </value>
                <value>
                    <fullName>Networking/COI</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Finance</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claw_back_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claw-back language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Branded_3_Minute_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Branded 3 Minute App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Branded_Fact_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Two page fact sheet.</description>
        <label>Co-Branded Fact Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Basis__c</fullName>
        <label>Commission Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payback Amount</fullName>
                </value>
                <value>
                    <fullName>Advced Upfront / Payback Residual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Schedule__c</fullName>
        <label>Commission Schedule</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Pricing_Clause__c</fullName>
        <label>Competitive Pricing Clause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors_they_work__c</fullName>
        <label>Competitors they work with currently?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Signed__c</fullName>
        <label>Contract Received &amp; Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <label>Contract Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CrystalReports_com_Tutorial_Sent__c</fullName>
        <label>CrystalReports.com Tutorial Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Back_End_Processor__c</fullName>
        <inlineHelpText>What back-end processor does the company use for credit card settlement?  Business Development needs to identify the settlement solution that is best for the Potential Partner.</inlineHelpText>
        <label>Current Back-End Processor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <summarizedField>Opportunity.Remaining_Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Advance_Payoff_Date__c</field>
            <operation>equals</operation>
            <value>1/1/1900</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Opp_Stage__c</fullName>
        <label>Current Opp Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_ROI__c</fullName>
        <label>Current ROI</label>
        <summarizedField>Opportunity.Current_ROI__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Remaining_Balance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_ID_as_Number_1__c</fullName>
        <formula>Customer_Identification_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID as Number 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID_as_a_number__c</fullName>
        <description>Test Field to link with Rapidadvance Account Manager</description>
        <label>Customer ID as a number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Identification_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <inlineHelpText>&quot;Doing Business As&quot; Name</inlineHelpText>
        <label>DBA (if different from Account Name)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBNumber__c</fullName>
        <label>D&amp;B Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBRating__c</fullName>
        <label>D&amp;B Rating</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateBusinessStarted__c</fullName>
        <label>Business Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_CA_License_was_received__c</fullName>
        <label>Date CA License was received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Signed__c</fullName>
        <description>Date ISO signed contract</description>
        <label>Date Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_since_last_call__c</fullName>
        <formula>IF( NOT(ISBLANK(Last_Call_Activity__c)),TODAY() -  DATEVALUE( Last_Call_Activity__c ),NULL)</formula>
        <label>Days since last call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_You_Sell_Merchant_Processing__c</fullName>
        <label>Do You Sell Merchant Processing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_You_Work_With_Any_Other_AF_Companies__c</fullName>
        <label>Do You Work With Any Other AF Companies?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_Merchant_Own_the_Building__c</fullName>
        <label>Does the Merchant Own the Building?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_First__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Monthly_Sales__c</fullName>
        <formula>AnnualRevenue  / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Total Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <inlineHelpText>Does the potential partner currently utilize other cash advance partners?</inlineHelpText>
        <label>Exclusive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executed_Contract_Sent__c</fullName>
        <label>Executed Contract Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FederalTaxID__c</fullName>
        <label>Federal Tax ID #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_or_State_Tax_Liens__c</fullName>
        <label>Federal or State Tax Liens?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Funding_Date__c</fullName>
        <label>First Funding Date</label>
        <summarizedField>Opportunity.Funded_by_WC__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flag_Account_for_Renewal__c</fullName>
        <formula>if( Most_Recent_Funded_Renewal_Date__c &lt; Most_Recent_Opp_Not_Processed__c ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Account for Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <formula>ISPICKVAL( Campaign__r.Status , &quot;Funding&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Stutus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GoToMtg_Training_Complete__c</fullName>
        <label>GoToMtg Training Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GoToMtg_Training_Scheduled__c</fullName>
        <label>GoToMtg Training Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GrossAnnualSales__c</fullName>
        <label>Gross Annual Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_convicted_of_a_felony__c</fullName>
        <label>Have you ever been convicted of a felony</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google+</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Many_Sales_Reps_Do_You_Have__c</fullName>
        <label>How Many Sales Reps Do You Have?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_do_you_acquire_customers__c</fullName>
        <label>How do you acquire customers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_much_MCA_vs_Loans__c</fullName>
        <label>How much MCA vs. Loans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_much_first_postion_funding__c</fullName>
        <description>Field Created for - Know your partner section</description>
        <label>How much first postion funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_much_new_funding__c</fullName>
        <description>Field created for - Know your partner section</description>
        <label>How much new funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Please_Explain__c</fullName>
        <label>If Other, Please Explain</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_So_Who_Do_You_Work_With__c</fullName>
        <label>If So, Who Do You Work With?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Provide_Further_Details__c</fullName>
        <label>If Yes, Please Provide Further Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Independent_Sales_Rep__c</fullName>
        <label>Independent Sales Rep.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adrew Mahoney</fullName>
                </value>
                <value>
                    <fullName>Brian Zimmerman</fullName>
                </value>
                <value>
                    <fullName>Emil</fullName>
                </value>
                <value>
                    <fullName>Joe Pichert</fullName>
                </value>
                <value>
                    <fullName>Robbie Nicholson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industries_you_are_focused_on__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Industries you are focused on</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Funding_Survey_Sent__c</fullName>
        <label>Initial Funding Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Funding_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Funding Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Int_Industry__c</fullName>
        <description>Industry</description>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Syndication__c</fullName>
        <description>Required on section &quot;Know your Partner&quot; : Incident #36085</description>
        <label>Interested in Syndication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestmentType__c</fullName>
        <label>Investment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Management &amp; Trusts</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Mutual Funds</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Annuity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Business_for_Sale__c</fullName>
        <label>Is Business for Sale?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>